# tilepad-cli

./: .gitmodules  Cargo.toml  README.md  cspell.json  dist-workspace.toml
.github/workflows/: release.yml
src/: bundle.rs  bundle_icon_pack.rs  create.rs  link.rs  main.rs  manifest.rs  reload.rs  server.rs  unlink.rs  zip.rs
wix/: main.wxs
