[package]
name = "tilepad-cli"
description = "CLI for developing tilepad plugins"
version = "0.3.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/tilepad/tilepad-cli"

[dependencies]
# Command line arguments
clap = { version = "4", features = ["derive"] }

# Command line prompting
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }

# Error reporting
eyre = "0.6.12"
color-eyre = "0.6"

# Zip files
zip = "2.4.2"

# Directory walking
walkdir = "2.5.0"

# Common system directories
dirs = "6.0.0"

# Manifest definitions
tilepad-manifest = { version = "0.7.0" }

# Cross platform working with symlinks
symlink = "0.1.0"

# HTTP client for making requests to the TilePad server
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
] }

# Serde for deserializing JSON
serde = { version = "1", features = ["derive"] }

# Git access to clone git repositories
git2 = "0.20.2"

[[bin]]
name = "tilepad"
path = "src/main.rs"
